# onyx-core-builders

./: Cargo.toml  Dockerfile  ENDPOINTS-SUMMARY.md  ENDPOINTS.md  README.md  TASK.md  UI.md  compose.yaml
migrations/: 1_init.sql  2_fill.sql
src/: areas.rs  brigades.rs  clients.rs  database.rs  departments.rs  equipment.rs  general.rs  helpers.rs  impls.rs  lib.rs  main.rs  materials.rs  sites.rs  tasks.rs  technical_personnel.rs  tehcnical_personnel.rs  utils.rs  workers.rs
templates/areas/: details.html  edit.html  list.html  new.html
templates/areas/api/: details.html  list.html  personnel.html  sites.html
templates/brigades/: details.html  edit.html  list.html  new.html
templates/brigades/api/: details.html  list.html  tasks.html  workers.html
templates/clients/: details.html  edit.html  list.html  new.html
templates/departments/: details.html  edit.html  list.html  new.html
templates/equipment/: details.html  edit.html  list.html  new.html
templates/general/: 404.html  500.html  index.html  notification.html
templates/materials/: details.html  edit.html  list.html  new.html
templates/selectors/: areas.html  brigades.html  clients.html  departments.html  equipment.html  materials.html  sites.html  tasks.html  technical_personnel.html  workers.html
templates/sites/: details.html  edit.html  list.html  new.html
templates/tasks/: details.html  edit.html  list.html  new.html
templates/technical_personnel/: details.html  edit.html  list.html  new.html
templates/workers/: details.html  edit.html  list.html  new.html
(+35 files in other folders)
