[package]
name = "onyx-core-builders"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
askama = "0.14.0"
axum = "0.8.3"
chrono = { version = "0.4.40", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "1.44.2", features = ["full"] }
